# otter

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  audit.toml  docker-compose.yml
.github/workflows/: ci.yml
docs/: api-guide.md  api.md  architecture.md  concepts.md  index.md  operations-nuc.md  package-lock.json  package.json  prompt-to-result-flow.md  related-documents.md  runbook.md  workspace-trust-model.md
docs-webapp/: tailwind.config.js
docs-webapp/src/: App.tsx
docs/.vitepress/: config.mts
docs/site/: package-lock.json  tailwind.config.js
docs/site/src/: App.tsx  index.css
docs/tutorials/: getting-started.md  runtime-operations.md
otter-core/: Cargo.toml
otter-core/migrations/: 20260228180000_init.sql  20260302120000_add_jobs_preview_url.sql  20260302133000_add_jobs_is_paused.sql  20260310152000_add_job_dependencies_and_runtime_commands.sql  20260402135032_add_runtime_app_registry.sql
otter-core/src/: config.rs  db.rs  domain.rs  lib.rs  queue.rs  service.rs  vibe.rs  workspace.rs
otter-core/src/runtime/: docker_manager.rs  mod.rs  shell_session.rs
otter-core/tests/: domain_validation.rs
otter-server/: Cargo.toml
otter-server/src/: main.rs
otter-worker/: Cargo.toml
otter-worker/src/: main.rs
scripts/: bootstrap_host_vibe_home.sh  install_mistral_vibe.sh  otter-cli.sh
